# SemCache-RS

./: .gitignore  Benchmarks.md  Cargo.toml  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.py
src/: lib.rs
tests/: test_basic.py  test_callback.py  test_persistence.py  test_semantic.py  test_ttl.py
