[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "semcache_rs"
version = "0.1.0"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "High-performance, in-process embedding cache for LLMs. Powered by Rust & SIMD to reduce API costs and latency."

[tool.maturin]
include = ["semcache_rs.pyi"]
